<resources>
    <string name="app_name">Galilei</string>
    <string name="titulo_inicial">Minhas Perícias</string>
    <string name="buscar_pericia">Buscar Perícias</string>
    <string name="nova_pericia">Nova Perícia</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_pericia_transito">PericiaTransito</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hora_atendimento">Hora Atendimento</string>
    <string name="hora_chamado">Hora Chamado</string>
    <string name="hora_ocorrencia">Hora Ocorrência</string>
    <string name="motorista">Motorista</string>
    <string name="delegacia">Delegacia</string>
    <string name="sitio_colisao">Sítio da Colisão</string>
    <string name="search_title">Search Title</string>
    <string name="search_hint">Search Hint</string>
    <string name="local_preservado">Preservação do Local</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="num_documento">Número de Documento</string>
    <string name="valor_documento">Valor Documento</string>
    <string name="dados_ocorrencia">Dados Ocorrência</string>
    <string name="placa_carro">Placa</string>
    <string name="modelo_carro">Modelo</string>
    <string name="proprietario">Definir Proprietário</string>
    <string name="vitima">Vítima</string>
    <string name="nome">Nome</string>
    <string name="cnh">Nº CNH</string>
    <string name="categoria">Categoria</string>
    <string name="tipo_doc">Tipo Doc.</string>
    <string name="num_doc">Nº Doc.</string>
    <string name="inserir_dano">Inserir Dano</string>
    <string name="tipo_dano">Tipo</string>
    <string name="tipo">Tipo</string>
    <string name="terco">Terço</string>
    <string name="setor_dano">Setor</string>
    <string name="compatibilidade_dano">O dano é compatível com a colisão?</string>
    <string name="endereco_veiculo">Endereço Veículo</string>
    <string name="veiculos">Veículos</string>
    <string name="endereco_transito">Endereço</string>
    <string name="tipo_via">Tipo de Via</string>
    <string name="topografia">Topografia</string>
    <string name="pavimentacao">Pavimentação</string>
    <string name="condicao_via">Condição da Via</string>
    <string name="iluminacao_via">Iluminação da Via</string>
    <string name="sinalizacao_pare">Sinalização Pare</string>
    <string name="semaforo">Semáforo</string>
    <string name="preferencia">Via Preferencial</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="letal">Vítima Letal</string>
    <string name="fatal">Vítima Fatal</string>
    <string name="veiculo_culpado">Veículo Culpado</string>
    <string name="sentido_culpado_origem">Sentido Origem Culpado</string>
    <string name="sentido_culpado_destino">Sentido Culpado Destino</string>
    <string name="sentido_culpado_via">Sentido Culpado Via</string>
    <string name="tipo_colisao">Tipo de Colisão</string>
    <string name="veiculo_vitima">Veículo Vítima</string>
    <string name="sentido_vitima_origem">Sentido Vìtima Origem</string>
    <string name="sentido_vitima_destino">Sentido Vítima Destino</string>
    <string name="sentido_vitima_via">Sentido Vítima Via</string>
    <string name="iniciar_pericia">Iniciar Perícia</string>
    <string name="cancelar">Cancelar</string>
    <string name="vitima_fatal">Vítima Fatal</string>
    <string name="salvar">Salvar</string>
    <string name="orgao_destino">Órgão de Destino</string>
    <string name="orgao_origem">Órgão de Origem</string>
    <string name="salvar_sair">Salvar e Fechar</string>
    <string name="anterior">Anterior</string>
    <string name="proxima">Próxima</string>
    <string name="data_atendimento">Data Atendimento</string>
    <string name="tipoVia">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="via_composta">Via Composta</string>
    <string name="faixas">Núm. Faixas</string>
    <string name="sentido_via_origem">Sentido Origem</string>
    <string name="sentido_via_destino">Sentido Destino</string>
    <string name="isCurva">Traçado</string>
    <string name="curva">Curva</string>
    <string name="autoridade_presente">Autoridade No Local</string>
    <string name="autoridade_comandante">Comandante</string>
    <string name="humidade_via">Humidade</string>
    <string name="placa_viatura">Placa Viatura</string>
    <string name="tipo_veiculo">Tipo Veículo</string>
    <string name="cor_veiculo">Cor Veículo</string>
    <string name="vitima_desconhecida">Vítima Desconhecida</string>
    <string name="genero">Gênero</string>

    <drawable name="clr_normal">#ffffff</drawable>
    <drawable name="clr_pressed">#c6c6c6</drawable>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <attr name="sc_corner_radius" format="dimension" />
    <attr name="sc_border_width" format="dimension" />
    <attr name="sc_tint_color" format="color" />
    <attr name="sc_checked_text_color" format="color" />
</resources>
