<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manter_endereco"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pefoce.peritolocal.ManterEnderecoActivity">

    <TextView
        android:id="@+id/txv_Cidade"
        android:text="@string/cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/auc_Cidade"
        android:layout_width="200dp"
        android:layout_below="@id/txv_Cidade"
        android:layout_alignLeft="@+id/txv_Cidade"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/txv_Bairro"
        android:text="@string/bairro"
        android:layout_toRightOf="@id/auc_Cidade"
        android:layout_alignBottom="@id/txv_Cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/auc_Bairro"
        android:layout_width="200dp"
        android:layout_alignBottom="@id/auc_Cidade"
        android:layout_alignLeft="@+id/txv_Bairro"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_below="@id/auc_Cidade"
        android:id="@+id/txv_Endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endereco"/>

    <EditText
        android:id="@+id/edt_Endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_Endereco"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txv_TipoVia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_via"
        android:layout_below="@id/edt_Endereco"
        android:layout_marginTop="5dp"  />

    <Spinner
        android:layout_width="150dp"
        android:id="@+id/spn_TipoVia"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edt_Endereco"
        android:layout_below="@id/txv_TipoVia"/>



    <Spinner
        android:layout_width="150dp"
        android:id="@+id/spn_Topografia"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/spn_TipoVia"
        android:layout_toRightOf="@id/spn_TipoVia"
        android:layout_marginLeft="40dp"/>


    <TextView
        android:id="@+id/txv_Topografia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topografia"
        android:layout_alignLeft="@id/spn_Topografia"
        android:layout_alignBottom="@id/txv_TipoVia"  />

    <Spinner
        android:layout_width="150dp"
        android:id="@+id/spn_Pavimentacao"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/spn_Topografia"
        android:layout_toRightOf="@id/spn_Topografia"
        android:layout_marginLeft="40dp"  />

    <TextView
        android:id="@+id/txv_Pavimentacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pavimentacao"
        android:layout_alignBottom="@id/txv_Topografia"
        android:layout_alignLeft="@id/spn_Pavimentacao"/>


    <Spinner
        android:layout_width="150dp"
        android:id="@+id/spn_CondicaoVia"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/spn_Topografia"
        android:layout_toRightOf="@id/spn_Pavimentacao"
        android:layout_marginLeft="15dp"   />

    <TextView
        android:id="@+id/txv_CondicaoVia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condicao_via"
        android:layout_alignBottom="@id/txv_Topografia"
        android:layout_alignLeft="@id/spn_CondicaoVia" />



    <TextView
        android:id="@+id/txv_Iluminacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iluminacao_via"
        android:layout_alignLeft="@id/spn_TipoVia"
        android:layout_below="@id/spn_TipoVia"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:layout_width="150dp"
        android:id="@+id/spn_Iluminacao"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_Iluminacao"
        android:layout_alignLeft="@id/txv_Iluminacao"
        android:layout_marginTop="5dp"  />


    <Spinner
        android:layout_width="150dp"
        android:id="@+id/spn_SinalPare"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/spn_Iluminacao"
        android:layout_toRightOf="@id/spn_Iluminacao"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/txv_SinalPare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sinalizacao_pare"
        android:layout_alignBottom="@id/txv_Iluminacao"
        android:layout_alignLeft="@id/spn_SinalPare" />



    <Spinner
        android:layout_width="150dp"
        android:id="@+id/spn_Semaforo"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/spn_Iluminacao"
        android:layout_toRightOf="@id/spn_SinalPare"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/txv_Semaforo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semaforo"
        android:layout_alignBottom="@id/txv_Iluminacao"
        android:layout_alignLeft="@id/spn_Semaforo" />



    <ImageButton
        android:id="@+id/imgb_Coordenadas"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/spn_Iluminacao"
        android:layout_alignLeft="@id/spn_Iluminacao"
        android:layout_marginTop="15dp"
        android:background="@android:drawable/ic_menu_mylocation" />

    <EditText
        android:id="@+id/edt_latitude"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgb_Coordenadas"
        android:layout_alignTop="@id/imgb_Coordenadas"
        android:hint="@string/latitude"/>

    <EditText
        android:id="@+id/edt_longitude"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgb_Coordenadas"
        android:layout_alignBottom="@id/imgb_Coordenadas"
        android:hint="@string/longitude"/>

    <CheckBox
        android:id="@+id/cxb_ViaComposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/via_composta"
        android:layout_alignLeft="@id/imgb_Coordenadas"
        android:layout_below="@id/edt_longitude"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/txv_Faixas"
        android:layout_alignLeft="@+id/cxb_ViaComposta"
        android:layout_below="@id/cxb_ViaComposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faixas"/>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nmb_Faixas"
        android:layout_alignLeft="@+id/cxb_ViaComposta"

        android:layout_below="@+id/txv_Faixas"/>

    <TextView
        android:id="@+id/txv_SentidoVia_Origem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_via_origem"
        android:layout_toRightOf="@id/edt_latitude"
        android:layout_alignTop="@id/edt_latitude"
        android:layout_marginLeft="15dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spn_SentidoVia_Origem"
        android:layout_alignLeft="@+id/txv_SentidoVia_Origem"
        android:layout_below="@+id/txv_SentidoVia_Origem"/>


    <TextView
        android:id="@+id/txv_SentidoVia_Destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_via_destino"
        android:layout_below="@id/spn_SentidoVia_Origem"
        android:layout_alignLeft="@id/txv_SentidoVia_Origem"/>

    <Spinner
        android:id="@+id/spn_SentidoVia_Destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txv_SentidoVia_Destino"
        android:layout_below="@id/txv_SentidoVia_Destino"/>

    <CheckBox
        android:id="@+id/cxb_Preferencial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/preferencia"
        android:layout_toRightOf="@id/cxb_ViaComposta"
        android:layout_alignBottom="@id/cxb_ViaComposta"
        android:layout_marginLeft="10dp"/>

    <CheckBox
        android:id="@+id/cxb_Tracado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/curva"
        android:layout_toRightOf="@id/cxb_Preferencial"
        android:layout_alignBottom="@id/cxb_ViaComposta"
        android:layout_marginLeft="10dp"/>

    <CheckBox
        android:id="@+id/cxb_Humidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/humidade_via"
        android:layout_toRightOf="@id/cxb_Tracado"
        android:layout_alignBottom="@id/cxb_ViaComposta"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/btn_Salvar_Endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/salvar_sair"/>

    <Button
        android:id="@+id/btn_Cancelar_Endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignBottom="@id/btn_Salvar_Endereco"
        android:text="@string/cancelar"
        android:layout_toRightOf="@id/btn_Salvar_Endereco"
        android:layout_marginLeft="60dp"/>

</RelativeLayout>
