<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:background="@color/lightGray">


    <TextView
        android:id="@+id/txv_Titulo_Dano"
        android:layout_height="wrap_content"
        android:text="@string/inserir_dano"
        android:layout_width="wrap_content"

        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:layout_width="wrap_content"
        android:id="@+id/txv_TipoDano"
        android:layout_alignLeft="@+id/spn_TipoDano"
        android:layout_below="@+id/txv_Titulo_Dano"/>

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/spn_TipoDano"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txv_TipoDano"/>


    <TextView
        android:layout_height="wrap_content"
        android:text="@string/terco"
        android:layout_width="wrap_content"
        android:id="@+id/txv_TercoDano"
        android:layout_alignLeft="@id/spn_TipoDano"
        android:layout_below="@+id/spn_TipoDano"/>

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/spn_TercoDano"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txv_TercoDano"/>



    <TextView
        android:layout_height="wrap_content"
        android:text="@string/setor_dano"
        android:layout_width="wrap_content"
        android:id="@+id/txv_SetorDano"
        android:layout_alignLeft="@id/spn_TipoDano"
        android:layout_below="@+id/spn_TercoDano"/>

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/spn_SetorDano"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txv_SetorDano"/>

    <CheckBox
        android:id="@+id/cxb_Compatibilidade"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/spn_SetorDano"
        android:hint="@string/compatibilidade_dano"/>

</RelativeLayout>