<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manter_vitima"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pefoce.peritolocal.ManterVitimaActivity">


    <TextView
        android:id="@+id/txv_NomeVitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"/>


    <CheckBox
        android:id="@+id/cxb_Vitima_Desconhecida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitima_desconhecida"
        android:layout_alignLeft="@+id/edt_NomeVitima"
        android:layout_below="@+id/edt_NomeVitima"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txv_TipoDocVitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_documento"
        android:layout_below="@id/cxb_Vitima_Desconhecida"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/spn_TipoDocumentoVitima"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_TipoDocVitima"
        android:layout_alignLeft="@id/txv_TipoDocVitima"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txv_TipoCNHVitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo CNH"
        android:layout_below="@id/spn_TipoDocumentoVitima"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/spn_TipoCNHVitima"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_TipoCNHVitima"
        android:layout_alignLeft="@id/txv_TipoCNHVitima"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txv_NumDocVitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_doc"
        android:layout_toRightOf="@id/spn_TipoDocumentoVitima"
        android:layout_alignBottom="@id/txv_TipoDocVitima"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edt_NumDocVitima"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_NumDocVitima"
        android:layout_alignLeft="@id/txv_NumDocVitima"/>


    <TextView
        android:id="@+id/txv_VitimaGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:layout_toRightOf="@id/edt_NumDocVitima"
        android:layout_alignBottom="@id/txv_TipoDocVitima"
        android:layout_marginLeft="10dp"/>
    <Spinner
        android:id="@+id/spn_VitimaGenero"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_NumDocVitima"
        android:layout_alignLeft="@id/txv_VitimaGenero"/>

    <TextView
        android:id="@+id/txv_DataNascimentoVitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_below="@+id/spn_TipoCNHVitima"
        android:text="@string/data_nascimento" />

    <TextView
        android:id="@+id/txv_DataNascimentoVitima_Valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_alignLeft="@id/txv_DataNascimentoVitima"
        android:onClick="SetNascimento"
        android:layout_below="@id/txv_DataNascimentoVitima"
        android:clickable="true"
        android:text="00/00/0000"
        android:layout_marginTop="6dp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/cxb_VitimaFatal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitima_fatal"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/txv_DataNascimentoVitima_Valor"
        android:layout_alignBottom="@id/txv_DataNascimentoVitima_Valor"    />




    <Button
        android:id="@+id/btn_Salvar_Vitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/txv_NomeVitima"
        android:onClick="Salvar_Fechar"
        android:text="@string/salvar_sair"/>

    <Button
        android:id="@+id/btn_Cancelar_Vitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignBottom="@id/btn_Salvar_Vitima"
        android:text="@string/cancelar"
        android:layout_toRightOf="@id/btn_Salvar_Vitima"
        android:layout_marginLeft="60dp"/>

    <EditText
        android:id="@+id/edt_NomeVitima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_NomeVitima"
        android:layout_alignParentStart="true" />

</RelativeLayout>
