<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manter_colisao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pefoce.peritolocal.ManterColisaoVeiculosActivity">


    <!-- ########## INÍCIO CONTROLES VEÍCULO CULPADO ######### -->
    <TextView
        android:id="@+id/txv_VeiculoCulpado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veiculo_culpado"
        android:layout_marginTop="15dp"
        />
    <Spinner
        android:id="@+id/spn_VeiculoCulpado"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txv_VeiculoCulpado"
        android:layout_below="@+id/txv_VeiculoCulpado"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/txv_SentidoCulpadoOrigem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_culpado_origem"
        android:layout_below="@+id/spn_VeiculoCulpado"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:layout_marginTop="5dp"
        android:id="@+id/spn_SentidoCulpadoOrigem"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txv_VeiculoCulpado"
        android:layout_below="@+id/txv_SentidoCulpadoOrigem"/>

    <TextView
        android:id="@+id/txv_SentidoCulpadoDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_culpado_destino"
        android:layout_below="@+id/spn_SentidoCulpadoOrigem"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:layout_marginTop="5dp"
        android:id="@+id/spn_SentidoCulpadoDestino"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txv_SentidoCulpadoDestino"
        android:layout_below="@+id/txv_SentidoCulpadoDestino"/>


    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/txv_SentidoViaCulpado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_culpado_via"
        android:layout_below="@+id/spn_SentidoCulpadoDestino"
        />

    <Spinner
        android:layout_marginTop="5dp"
        android:id="@+id/spn_SentidoViaCulpado"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_SentidoViaCulpado"
        android:layout_alignLeft="@id/txv_SentidoViaCulpado"/>

    <!-- ######### FIM CONTROLES VEÍCULO CULPADO ############ -->



    <!-- ########## INÍCIO CONTROLES VEÍCULO VÍTIMA ######### -->
    <TextView
        android:id="@+id/txv_VeiculoVitima"
        android:layout_marginRight="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veiculo_vitima"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/txv_VeiculoCulpado"
        />
    <Spinner
        android:id="@+id/spn_VeiculoVitima"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txv_VeiculoVitima"
        android:layout_below="@+id/txv_VeiculoVitima"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/txv_SentidoVitimaOrigem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_vitima_origem"
        android:layout_alignLeft="@id/spn_VeiculoVitima"
        android:layout_alignBottom="@id/txv_SentidoCulpadoOrigem"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:id="@+id/spn_SentidoVitimaOrigem"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txv_VeiculoVitima"
        android:layout_below="@+id/txv_SentidoVitimaOrigem"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txv_SentidoVitimaDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_vitima_destino"
        android:layout_below="@+id/spn_SentidoVitimaOrigem"
        android:layout_alignLeft="@id/txv_VeiculoVitima"
        android:layout_marginTop="15dp"/>
    <Spinner
        android:id="@+id/spn_SentidoVitimaDestino"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txv_SentidoVitimaDestino"
        android:layout_below="@+id/txv_SentidoVitimaDestino"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/txv_SentidoViaVitima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentido_vitima_via"
        android:layout_below="@+id/spn_SentidoVitimaDestino"
        android:layout_alignLeft="@id/txv_VeiculoVitima"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:id="@+id/spn_SentidoViaVitima"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_SentidoViaVitima"
        android:layout_alignLeft="@id/txv_SentidoViaVitima"
        android:layout_marginTop="5dp"
        />

    <!-- ######### FIM CONTROLES VEÍCULO VITIMA ############ -->

    <TextView
        android:id="@+id/txv_TipoColisao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_colisao"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/spn_SentidoViaCulpado"
        />

    <Spinner
        android:id="@+id/spn_TipoColisao"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txv_TipoColisao"
        />


    <Button
        android:id="@+id/btn_Salvar_Endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="Salvar_Fechar"
        android:text="@string/salvar_sair"/>

    <Button
        android:id="@+id/btn_Cancelar_Endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignBottom="@id/btn_Salvar_Endereco"
        android:text="@string/cancelar"
        android:layout_toRightOf="@id/btn_Salvar_Endereco"
        android:layout_marginLeft="60dp"/>

</RelativeLayout>
