<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/lightGray"  >



    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/edt_NomeProprietario"  />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_Nome_Proprietario"
        android:layout_alignLeft="@+id/edt_NomeProprietario"
        android:text="@string/nome"    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_CNH_Proprietario"
        android:layout_below="@id/edt_NomeProprietario"
        android:text="@string/cnh"
        android:layout_alignLeft="@+id/edt_ProprietarioCNH"   />
    <EditText
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edt_NomeProprietario"
        android:layout_below="@id/txv_CNH_Proprietario"
        android:id="@+id/edt_ProprietarioCNH"  />


    <Spinner
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/edt_NomeProprietario"
        android:layout_below="@id/txv_CNH_Proprietario"
        android:id="@+id/spn_CNH_Proprietario_normal"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:layout_below="@id/edt_NomeProprietario"
        android:layout_alignLeft="@id/spn_CNH_Proprietario_normal"   />
<!--
    <TextView
        android:id="@+id/txv_TipoDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_doc"
        android:layout_below="@id/edt_CNH"
        android:layout_alignLeft="@id/edt_CNH"
        />
    <Spinner
        android:id="@+id/spn_TipoDocumento_Proprietario"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_TipoDoc"
        android:layout_alignLeft="@id/txv_TipoDoc"  />
<EditText
    android:id="@+id/edt_NumDoc"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/edt_Categoria"
    android:layout_below="@+id/txv_NumDoc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_NumDoc"
        android:layout_alignLeft="@id/edt_NumDoc"
        android:layout_below="@id/edt_Categoria"
        android:text="@string/num_doc"/>
-->

    <Button
        android:id="@+id/btn_Salvar_Proprietario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_ProprietarioCNH"
        android:layout_alignLeft="@+id/edt_ProprietarioCNH"
        android:text="Salvar"/>

    <Button
        android:id="@+id/btn_Cancelar_Proprietario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:layout_alignBottom="@id/btn_Salvar_Proprietario"
        android:layout_alignRight="@+id/spn_CNH_Proprietario_normal"/>

</RelativeLayout>